src/App.css
.App {
  text-align: center;
}

.tile {
  background: #fff;
  border: 1px solid #999;
  float: left;
  font-size: 20px;
  font-weight: bold;
  line-height: 34px;
  height: 100px;
  margin-right: -1px;
  margin-top: -1px;
  padding: 0;
  text-align: center;
  width: 100px;
  transition: 0.5s;
}

.board-row:after {
  clear: both;
  content: "";
  display: table;
}

.content {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
}

.game {
    margin: 0px 40px;
    min-width: 400px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-evenly;
    width: 40%;
    height: 90vh;
}

body {
  font: 14px "Century Gothic", Futura, sans-serif;
}

.tile:focus {
  outline: none;
}

.red {
    background: rgba(252, 3, 3, 0.6);
    font-size: 30px;
}

.black {
    background: rgba(102, 102, 102, 0.6);
    font-size: 30px;
}

.available {
    background: rgba(3, 252, 19, 0.3);
}

.game-info {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 10%;
  width: 60%;
}

.next {
  width: 100%;
  display: flex;
  justify-content: space-between;
}

.history-buttons {
  width: 100%;
  display: flex;
  justify-content: space-between;
}

.title {
  height: 10%;
}

.disable {
  color: grey;
}

@media (max-width: 400px) {
  .tile {
    width: 25vw;
    height: 25vw;
    font-size: 1em;
  }
}
.col-content{
  margin: 10px;
}

.col {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  margin: 20px;
  margin-top: 15vh;
  border: grey 2px solid;
  background-color: #bdbdbd;
  height: 60vh;
  transition: 0.2s;
}

@media (max-width: 1000px) {
  .col {
    visibility: hidden;
    opacity: 0;
  }
}

